# moose

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  archive.cpp  archive.h  error.h  json_archive.cpp  json_archive.h  names.txt  object_factory.h  serialize.h
.github/workflows/: ubuntu-ctest.yml
include/moose/: archive.h  archive.i  binary_reader.h  binary_writer.h  binary_writer.i  content_type.h  exception_util.h  exceptions.h  export.h  from_binary.h  from_json.h  hint.h  input_archive.h  json_archive.h  json_archive_in.h  json_archive_out.h  json_reader.h  json_writer.h  moose.h  moose_fwd.h  object_factory.h  object_factory_impl.h  output_archive.h  range.h  range.i  reader.h  serialize.h  stl_serialization.h  to_binary.h  to_json.h  type.h  type.i  type_traits.h  type_traits.i  types.h  types.i  version.h  writer.h
include/moose/detail/: dummynamegenerator.h  forward_if_not_nullptr.h  object_factory.h  serialize.h
include/moose/extensions/: buz.h  glm.h
include/moose/stl/: array.h  filesystem.h  optional.h  variant.h
sample/: CMakeLists.txt  moosesample.cpp
src/moose/: archive.cpp  binary_reader.cpp  input_archive.cpp  json_archive.cpp  json_archive_in.cpp  json_archive_out.cpp  json_reader.cpp  json_writer.cpp  object_factory.cpp  output_archive.cpp  type.cpp  types.cpp  version.cpp
src/sample/: moosesample.cpp
tests/: CMakeLists.txt  enums.t.cpp  json_archive_in.t.cpp  names.t.cpp  stl.t.cpp  to_json_and_back.h  unpacking.t.cpp  utils.h  version.t.cpp
